[gd_scene load_steps=15 format=2]

[ext_resource path="res://Hitbox Hurtbox/hitbox.tscn" type="PackedScene" id=1]
[ext_resource path="res://Hitbox Hurtbox/hurtbox.tscn" type="PackedScene" id=2]
[ext_resource path="res://Enemies/PlayerDetectionZone.tscn" type="PackedScene" id=3]
[ext_resource path="res://Dungeon Tileset/creatures.png" type="Texture" id=4]
[ext_resource path="res://Enemies/Rat.gd" type="Script" id=5]
[ext_resource path="res://Stats.tscn" type="PackedScene" id=6]

[sub_resource type="CapsuleShape2D" id=1]
radius = 8.0
height = 16.0

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 32, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 64, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 96, 32, 32, 32 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 16.0
} ]

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 240, 10 )

[sub_resource type="CapsuleShape2D" id=8]
radius = 7.99997
height = 32.0001

[node name="Rat" type="KinematicBody2D"]
collision_layer = 16
script = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 8 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 6 )

[node name="Stats" parent="." instance=ExtResource( 6 )]

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 3 )]

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
position = Vector2( 0, 8 )
shape = SubResource( 7 )

[node name="hitbox" parent="." instance=ExtResource( 1 )]
collision_mask = 4

[node name="collisionshape2d" parent="hitbox" index="0"]
position = Vector2( 0, 8 )
rotation = 1.5708
shape = SubResource( 8 )
disabled = false

[node name="hurtbox" parent="." instance=ExtResource( 2 )]
gravity_point = true
collision_layer = 8

[node name="CollisionShape2D" parent="hurtbox" index="0"]
position = Vector2( 0, 8 )
rotation = 1.5708
[connection signal="nohealth" from="Stats" to="." method="_on_Stats_nohealth"]
[connection signal="body_exited" from="PlayerDetectionZone" to="." method="_on_PlayerDetectionZone_body_exited"]
[connection signal="area_entered" from="hurtbox" to="." method="_on_hurtbox_area_entered"]

[editable path="PlayerDetectionZone"]

[editable path="hitbox"]

[editable path="hurtbox"]
